Added few compoents

--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@xyflow/react": "^12.9.3",
+    "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jotai": "^2.15.2",
     "re-resizable": "^6.11.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-draggable": "^4.5.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "react-tooltip": "^5.30.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
